fix(infra): add params to azure lambda policy

--- a/infra/iam_policies/health-check-policy.json.tmpl
+++ b/infra/iam_policies/health-check-policy.json.tmpl
@@ -54,7 +54,7 @@
         "lambda:UpdateFunctionConfiguration",
         "lambda:InvokeFunction"
       ],
-      "Resource": "arn:aws:lambda:eu-south-1:637423468901:function:azure-lambda"
+      "Resource": "arn:aws:lambda:${region}:637423468901:function:azure-lambda-${env}"
     }
   ]
 }
