--- a/infra/iam_policies/deploy-pipeline-policy.json.tmpl
+++ b/infra/iam_policies/deploy-pipeline-policy.json.tmpl
@@ -4,47 +4,153 @@
     {
       "Effect":"Allow",
       "Action":[
-        "route53:GetHostedZone",
-        "route53:ListTagsForResource",
-        "route53:ListResourceRecordSets",
-        "route53:CreateHostedZone",
-        "route53:ChangeResourceRecordSets",
-        "route53:DeleteHostedZone"
+        "s3:GetObject",
+        "s3:ListBucket",
+        "s3:PutObject"
       ],
       "Resource":[
-        "*"
+        "arn:aws:s3:::${s3_tf_state_bucket}/state/*"
+      ]
+    },
+    {
+      "Effect": "Allow",
+      "Action": [
+        "lambda:CreateFunction",
+        "lambda:UpdateFunctionCode",
+        "lambda:UpdateFunctionConfiguration",
+        "lambda:GetFunction",
+        "lambda:ListVersionsByFunction",
+        "lambda:GetFunctionCodeSigningConfig",
+        "lambda:GetPolicy"
+      ],
+      "Resource": [
+        "arn:aws:lambda:${region}:${account_id}:function:aws_list-accounts-${env}",
+        "arn:aws:lambda:${region}:${account_id}:function:aws_verify-takeover-${env}",
+        "arn:aws:lambda:${region}:${account_id}:function:azure-lambda-${env}",
+        "arn:aws:lambda:${region}:${account_id}:function:aws_list-accounts-${env}:*",
+        "arn:aws:lambda:${region}:${account_id}:function:aws_verify-takeover-${env}:*",
+        "arn:aws:lambda:${region}:${account_id}:function:azure-lambda-${env}:*"
+      ]
+    },
+    {
+      "Effect": "Allow",
+      "Action": [
+        "lambda:GetEventSourceMapping"
+      ],
+      "Resource": [
+        "arn:aws:lambda:${region}:${account_id}:event-source-mapping:*"
       ]
     },
     {
       "Effect":"Allow",
       "Action":[
-        "s3:CreateBucket",
-        "s3:PutBucketAcl",
-        "s3:PutBucketPublicAccessBlock",
-        "s3:PutBucketOwnershipControls",
-        "s3:DeleteBucket"
+         "dynamodb:PutItem",
+         "dynamodb:GetItem",
+         "dynamodb:DeleteItem"
+      ],
+      "Resource":"arn:aws:dynamodb:${region}:${account_id}:table/terraform-lock"
+    },
+    {
+      "Effect":"Allow",
+      "Action":[
+         "iam:GetRole",
+         "iam:ListRolePolicies",
+         "iam:ListAttachedRolePolicies"
       ],
       "Resource":[
-        "arn:aws:s3:::*",
-        "arn:aws:s3:::*/*"
+        "arn:aws:iam::${account_id}:role/SubdomainTakeoverHealthCheckRole-${env}",
+        "arn:aws:iam::${account_id}:role/SubdomainTakeoverDeployPipelineRole-${env}",
+        "arn:aws:iam::${account_id}:role/aws_list-accounts-${env}",
+        "arn:aws:iam::${account_id}:role/aws_verify-takeover-${env}",
+        "arn:aws:iam::${account_id}:role/azure-lambda-${env}"
       ]
     },
     {
-      "Sid": "LmabdaConfiguraton",
-      "Effect": "Allow",
-      "Action": [
-        "lambda:GetFunctionConfiguration",
-        "lambda:UpdateFunctionConfiguration"
+      "Effect":"Allow",
+      "Action":[
+         "iam:GetPolicy",
+         "iam:GetPolicyVersion"
       ],
-      "Resource": "arn:aws:lambda:${region}:637423468901:function:aws_verify-takeover-${env}"
+      "Resource":[
+        "arn:aws:iam::${account_id}:policy/SubdomainHealtCheckPolicy-${env}",
+        "arn:aws:iam::${account_id}:policy/SubdomainDeployPipelinePolicy-${env}",
+        "arn:aws:iam::${account_id}:policy/cross-account-role-policy-${env}",
+        "arn:aws:iam::${account_id}:policy/ProdSecCrossAccountPolicy-${env}",
+        "arn:aws:iam::${account_id}:policy/sqs-write-policy-${env}",
+        "arn:aws:iam::${account_id}:policy/aws_list-accounts-${env}-logs",
+        "arn:aws:iam::${account_id}:policy/aws_verify-takeover-${env}-logs",
+        "arn:aws:iam::${account_id}:policy/azure-lambda-${env}-logs"
+      ]
     },
     {
-      "Sid": "LambdaInvoke",
-      "Effect": "Allow",
-      "Action": [
-        "lambda:InvokeFunction"
+      "Effect":"Allow",
+      "Action":[
+         "iam:GetOpenIDConnectProvider"
       ],
-      "Resource": "arn:aws:lambda:${region}:637423468901:function:aws_list-accounts-${env}"
+      "Resource":[
+        "arn:aws:iam::${account_id}:oidc-provider/token.actions.githubusercontent.com"
+      ]
+    },
+    {
+      "Effect":"Allow",
+      "Action":[
+         "ssm:GetParameter"
+      ],
+      "Resource":[
+        "arn:aws:ssm:${region}:${account_id}:parameter/AZURE_TENANT_ID",
+        "arn:aws:ssm:${region}:${account_id}:parameter/AZURE_CLIENT_ID",
+        "arn:aws:ssm:${region}:${account_id}:parameter/AZURE_CLIENT_SECRET",
+        "arn:aws:ssm:${region}:${account_id}:parameter/SLACK_TOKEN",
+        "arn:aws:ssm:${region}:${account_id}:parameter/CHANNEL_ID",
+        "arn:aws:ssm:${region}:${account_id}:parameter/CHANNEL_ID_DEBUG",
+        "arn:aws:ssm:${region}:${account_id}:parameter/SQS_LIST_ACCOUNTS",
+        "arn:aws:ssm:${region}:${account_id}:parameter/LIST_ACCOUNTS_ROLE",
+        "arn:aws:ssm:${region}:${account_id}:parameter/LIST_ACCOUNTS_ROLE_SESSION_NAME",
+        "arn:aws:ssm:${region}:${account_id}:parameter/PRODSEC_READONLY_ROLE"
+      ]
+    },
+    {
+      "Effect":"Allow",
+      "Action":[
+         "events:DescribeRule",
+         "events:ListTagsForResource",
+         "events:ListTargetsByRule"
+      ],
+      "Resource":[
+        "arn:aws:events:${region}:${account_id}:rule/Monday-schedule-${env}",
+        "arn:aws:events:${region}:${account_id}:rule/Monday-schedule-aws-lists-accounts-${env}"
+      ]
+    },
+        {
+      "Effect":"Allow",
+      "Action":[
+         "logs:ListTagsForResource"
+      ],
+      "Resource":[
+        "arn:aws:logs:${region}:${account_id}:log-group:/aws/lambda/aws_list-lambda-${env}",
+        "arn:aws:logs:${region}:${account_id}:log-group:/aws/lambda/aws_verify-takeover-${env}",
+        "arn:aws:logs:${region}:${account_id}:log-group:/aws/lambda/azure-lambda-${env}"
+      ]
+    },
+    {
+      "Effect":"Allow",
+      "Action":[
+         "sqs:getqueueattributes",
+         "sqs:listqueuetags"
+      ],
+      "Resource":[
+        "arn:aws:sqs:${region}:${account_id}:account-ids-${env}-deadletter-queue",
+        "arn:aws:sqs:${region}:${account_id}:account-ids-${env}"
+      ]
+    },
+    {
+      "Effect":"Allow",
+      "Action":[
+         "logs:DescribeLogGroups"
+      ],
+      "Resource":[
+        "arn:aws:logs:${region}:${account_id}:log-group:*"
+      ]
     }
   ]
 }
