fix: lambda permissions

--- a/infra/iam_policies/deploy-pipeline-policy.json.tmpl
+++ b/infra/iam_policies/deploy-pipeline-policy.json.tmpl
@@ -21,7 +21,8 @@
         "lambda:GetFunction",
         "lambda:ListVersionsByFunction",
         "lambda:GetFunctionCodeSigningConfig",
-        "lambda:GetPolicy"
+        "lambda:GetPolicy",
+        "lambda:PublishVersion"
       ],
       "Resource": [
         "arn:aws:lambda:${region}:${account_id}:function:aws_list-accounts-${env}",
