fix: change event caller for debug purpose

--- a/infra/iam_policies/deploy-pipeline-policy.json.tmpl
+++ b/infra/iam_policies/deploy-pipeline-policy.json.tmpl
@@ -18,6 +18,7 @@
         "lambda:CreateFunction",
         "lambda:UpdateFunctionCode",
         "lambda:UpdateFunctionConfiguration",
+        "lambda:GetFunctionConfiguration",
         "lambda:GetFunction",
         "lambda:ListVersionsByFunction",
         "lambda:GetFunctionCodeSigningConfig",
