--- a/infra/iam_policies/health-check-policy.json.tmpl
+++ b/infra/iam_policies/health-check-policy.json.tmpl
@@ -36,7 +36,7 @@
         "lambda:GetFunctionConfiguration",
         "lambda:UpdateFunctionConfiguration"
       ],
-      "Resource": "arn:aws:lambda:${region}:637423468901:function:aws_verify-takeover-${env}"
+      "Resource": "arn:aws:lambda:${region}:${account-id}:function:aws_verify-takeover-${env}"
     },
     {
       "Sid": "LambdaInvoke",
@@ -44,7 +44,7 @@
       "Action": [
         "lambda:InvokeFunction"
       ],
-      "Resource": "arn:aws:lambda:${region}:637423468901:function:aws_list-accounts-${env}"
+      "Resource": "arn:aws:lambda:${region}:${account-id}:function:aws_list-accounts-${env}"
     },
     {
       "Sid": "LmabdaConfigurationAzure",
@@ -54,7 +54,7 @@
         "lambda:UpdateFunctionConfiguration",
         "lambda:InvokeFunction"
       ],
-      "Resource": "arn:aws:lambda:${region}:637423468901:function:azure-lambda-${env}"
+      "Resource": "arn:aws:lambda:${region}:${account-id}:function:azure-lambda-${env}"
     }
   ]
 }
